# PixelRain

./: CMakeLists.txt  README.md
SOIL/: SOIL.c  SOIL.h
include/: color.h  pixelrain.h  pixelrain_defaults.h  vector.h
src/: main.cpp
